# openjaus

./: .hgignore  README.md
openjaus/branches/OpenJAUSv3.3/libjausC/: COPYING  Makefile  Makefile.in  config.h.in  configure.ac  genmake
openjaus/branches/OpenJAUSv3.3/libjausC/include/: jaus.h  jausAddress.h  jausComponent.h  jausNode.h  jausPayloadInterface.h  jausService.h  jausState.h  jausSubsystem.h
openjaus/branches/OpenJAUSv3.3/libjausC/include/cimar/jaus/: jausComponent.h  jausPayloadInterface.h  jausSubsystem.h
openjaus/branches/OpenJAUSv3.3/libjausC/include/cimar/jaus/message/: jausMessage.h  skeletonMessage.h
openjaus/branches/OpenJAUSv3.3/libjausC/include/cimar/jaus/type/: jausByte.h  jausEventLimit.h  jausShortPresenceVector.h  jausUnsignedInteger.h  jausUnsignedLong.h  jausWorldModelVectorObject.h
openjaus/branches/OpenJAUSv3.3/libjausC/include/message/: jausMessage.h  jausMessageHeaders.h  skeletonMessage.h
openjaus/branches/OpenJAUSv3.3/libjausC/include/message/command/core/: clearEmergencyMessage.h  confirmComponentControlMessage.h  createServiceConnectionMessage.h  rejectComponentControlMessage.h  releaseComponentControlMessage.h  setEmergencyMessage.h  setTimeMessage.h  terminateServiceConnectionMessage.h
openjaus/branches/OpenJAUSv3.3/libjausC/include/message/command/environment/: selectCameraMessage.h
openjaus/branches/OpenJAUSv3.3/libjausC/include/message/command/platform/: setGlobalVectorMessage.h  setGlobalWaypointMessage.h  setVelocityStateMessage.h  setWrenchEffortMessage.h
openjaus/branches/OpenJAUSv3.3/libjausC/include/message/experimental/: queryServicesMessage.h  reportIdentificationMessage.h  reportPayloadInterfaceMessage.h  reportServicesMessage.h
openjaus/branches/OpenJAUSv3.3/libjausC/include/message/experimental/worldModel/: createVksObjectsMessage.h
openjaus/branches/OpenJAUSv3.3/libjausC/include/message/inform/communications/: reportHeartbeatPulseMessage.h
openjaus/branches/OpenJAUSv3.3/libjausC/include/message/inform/core/: reportComponentStatusMessage.h  reportTimeMessage.h
openjaus/branches/OpenJAUSv3.3/libjausC/include/message/inform/platform/: reportDiscreteDevicesMessage.h  reportGlobalVectorMessage.h  reportWrenchEffortMessage.h
openjaus/branches/OpenJAUSv3.3/libjausC/include/message/query/communications/: queryHeartbeatPulseMessage.h
openjaus/branches/OpenJAUSv3.3/libjausC/include/message/query/core/: queryComponentStatusMessage.h
openjaus/branches/OpenJAUSv3.3/libjausC/include/message/query/platform/: queryGlobalWaypointMessage.h  queryPlatformOperationalDataMessage.h  queryTravelSpeedMessage.h  queryVelocityStateMessage.h  queryWrenchEffortMessage.h
openjaus/branches/OpenJAUSv3.3/libjausC/include/type/: jausEventLimit.h  jausFloat.h  jausIntegerPresenceVector.h  jausShort.h  jausShortPresenceVector.h  jausWorldModelFeatureClass.h  jausWorldModelVectorObject.h
openjaus/branches/OpenJAUSv3.3/libjausC/src/: jausAddress.c  jausComponent.c  jausNode.c  jausService.c  jausState.c  jausSubsystem.c  pointLla.c
openjaus/branches/OpenJAUSv3.3/libjausC/src/message/: jausBytePresenceVector.c  jausIntegerPresenceVector.c  jausMessage.c
openjaus/branches/OpenJAUSv3.3/libjausC/src/message/command/core/: resetMessage.c  (+16 more)
openjaus/branches/OpenJAUSv3.3/libjausC/src/message/experimental/: configurationChangedEventNotificationMessage.c  configurationChangedEventSetupMessage.c  queryConfigurationMessage.c  queryIdentificationMessage.c  queryPayloadDataElementMessage.c  queryPayloadInterfaceMessage.c  queryServicesMessage.c  reportConfigurationMessage.c  reportIdentificationMessage.c  reportPayloadDataElementMessage.c  reportPayloadInterfaceMessage.c  reportServicesMessage.c  setPayloadDataElementMessage.c
openjaus/branches/OpenJAUSv3.3/libjausC/src/type/: jausEventLimit.c  jausLong.c  jausTime.c  jausType.c  jausUnsignedLong.c  jausWorldModelVectorObject.c
openjaus/trunk/Core/libcimar/: Install-CIMAR.sh  Makefile  Makefile.am  Makefile.in  config.h.in  configure  configure.ac  old_useless_Makefile_dnt
openjaus/trunk/Core/libcimar/autom4te.cache/: output.1  output.2  requests  traces.0  traces.1  traces.2
openjaus/trunk/Core/libcimar/include/: cimar.h
openjaus/trunk/Core/libcimar/include/cimar/: bres.h  datagramPacket.h  datagramSocket.h  greatCircle.h  inetAddress.h  multicastSocket.h  networkInterface.h  pointGg.h  pointUtm.h  portLib.h  queue.h  timeLib.h  torusBuffer.h  vector.h
openjaus/trunk/Core/libcimar/include/cimar/utm/: cproj.h  proj.h  utmLib.h
openjaus/trunk/Core/libcimar/src/: bres.c  datagramSocket.c  inetAddress.c  logLib.c  multicastSocket.c  networkInterface.c  pointGg.c  pointLla.c  portLib.c  properties.c  queue.c  timeLib.c  torusBuffer.c  vector.c
openjaus/trunk/Core/libcimar/src/utm/: cproj.c  utminv.c
openjaus/trunk/Core/libjausC/: Install-CIMAR.sh  Makefile  Makefile.am  Uninstall  old_useless_Makefile_dnt
openjaus/trunk/Core/libjausC/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1  traces.2
openjaus/trunk/Core/libjausC/include/cimar/jaus/: jausAddress.h  jausComponent.h  jausNode.h
openjaus/trunk/Core/libjausC/src/: Makefile  jausAddress.c  jausComponent.c  jausPayloadInterface.c  jausState.c  jausSubsystem.c
openjaus/trunk/Core/libjausC/src/message/: Makefile  jausBytePresenceVector.c  jausMessage.c  jausShortPresenceVector.c  skeletonMessage.c
openjaus/trunk/Core/libjausC/src/message/command/: Makefile
openjaus/trunk/Core/libjausC/src/message/experimental/: Makefile  configurationChangedEventNotificationMessage.c  queryIdentificationMessage.c  queryPayloadDataElementMessage.c  queryServicesMessage.c  reportConfigurationMessage.c  reportIdentificationMessage.c  reportPayloadDataElementMessage.c  setPayloadDataElementMessage.c
openjaus/trunk/Core/libjausC/src/message/inform/: Makefile
openjaus/trunk/Core/libjausC/src/message/query/: Makefile
openjaus/trunk/Core/libjausC/src/type/: Makefile  jausByte.c  jausDouble.c  jausFloat.c  jausInteger.c  jausShort.c  jausType.c  jausUnsignedInteger.c  jausUnsignedShort.c  jausWorldModelFeatureClass.c
(+3341 files in other folders)
