lib_LIBRARIES = libjausC.a
libjausC_a_SOURCES = \
	src/jausAddress.c \
	src/jausComponent.c \
	src/jausNode.c \
	src/jausPayloadInterface.c \
	src/jausService.c \
	src/jausState.c \
	src/jausSubsystem.c \
	src/message/jausBytePresenceVector.c \
	src/message/jausIntegerPresenceVector.c \
	src/message/jausMessage.c \
	src/message/jausShortPresenceVector.c \
	src/message/command/core/activateServiceConnectionMessage.c \
	src/message/command/core/clearEmergencyMessage.c \
	src/message/command/core/confirmComponentControlMessage.c \
	src/message/command/core/confirmServiceConnectionMessage.c \
	src/message/command/core/createServiceConnectionMessage.c \
	src/message/command/core/rejectComponentControlMessage.c \
	src/message/command/core/releaseComponentControlMessage.c \
	src/message/command/core/requestComponentControlMessage.c \
	src/message/command/core/resetMessage.c \
	src/message/command/core/resumeMessage.c \
	src/message/command/core/setComponentAuthorityMessage.c \
	src/message/command/core/setEmergencyMessage.c \
	src/message/command/core/setTimeMessage.c \
	src/message/command/core/shutdownMessage.c \
	src/message/command/core/standbyMessage.c \
	src/message/command/core/suspendServiceConnectionMessage.c \
	src/message/command/core/terminateServiceConnectionMessage.c \
	src/message/command/environment/selectCameraMessage.c \
	src/message/command/platform/setDiscreteDevicesMessage.c \
	src/message/command/platform/setGlobalVectorMessage.c \
	src/message/command/platform/setGlobalWaypointMessage.c \
	src/message/command/platform/setTravelSpeedMessage.c \
	src/message/command/platform/setVelocityStateMessage.c \
	src/message/command/platform/setWrenchEffortMessage.c \
	src/message/experimental/configurationChangedEventNotificationMessage.c \
	src/message/experimental/configurationChangedEventSetupMessage.c \
	src/message/experimental/queryConfigurationMessage.c \
	src/message/experimental/queryIdentificationMessage.c \
	src/message/experimental/queryPayloadDataElementMessage.c \
	src/message/experimental/queryPayloadInterfaceMessage.c \
	src/message/experimental/queryServicesMessage.c \
	src/message/experimental/reportConfigurationMessage.c \
	src/message/experimental/reportIdentificationMessage.c \
	src/message/experimental/reportPayloadDataElementMessage.c \
	src/message/experimental/reportPayloadInterfaceMessage.c \
	src/message/experimental/reportServicesMessage.c \
	src/message/experimental/setPayloadDataElementMessage.c \
	src/message/experimental/events/cancelEventMessage.c \
	src/message/experimental/events/confirmEventMessage.c \
	src/message/experimental/events/createEventMessage.c \
	src/message/experimental/worldModel/createVksObjectsMessage.c \
	src/message/experimental/worldModel/deleteVksObjectsMessage.c \
	src/message/experimental/worldModel/queryVksBoundsMessage.c \
	src/message/experimental/worldModel/queryVksFeatureClassMetadataMessage.c \
	src/message/experimental/worldModel/queryVksObjectsMessage.c \
	src/message/experimental/worldModel/reportVksBoundsMessage.c \
	src/message/experimental/worldModel/reportVksFeatureClassMetadataMessage.c \
	src/message/experimental/worldModel/reportVksObjectsCreationMessage.c \
	src/message/experimental/worldModel/reportVksObjectsMessage.c \
	src/message/inform/communications/reportHeartbeatPulseMessage.c \
	src/message/inform/core/reportComponentAuthorityMessage.c \
	src/message/inform/core/reportComponentStatusMessage.c \
	src/message/inform/core/reportTimeMessage.c \
	src/message/inform/environment/reportVideoFrameMessage.c \
	src/message/inform/environment/reportCameraCountMessage.c \
	src/message/inform/platform/reportDiscreteDevicesMessage.c \
	src/message/inform/platform/reportGlobalPoseMessage.c \
	src/message/inform/platform/reportGlobalVectorMessage.c \
	src/message/inform/platform/reportGlobalWaypointMessage.c \
	src/message/inform/platform/reportPlatformOperationalDataMessage.c \
	src/message/inform/platform/reportPlatformSpecificationsMessage.c \
	src/message/inform/platform/reportTravelSpeedMessage.c \
	src/message/inform/platform/reportVelocityStateMessage.c \
	src/message/inform/platform/reportWaypointCountMessage.c \
	src/message/inform/platform/reportWrenchEffortMessage.c \
	src/message/query/communications/queryHeartbeatPulseMessage.c \
	src/message/query/core/queryComponentAuthorityMessage.c \
	src/message/query/core/queryComponentStatusMessage.c \
	src/message/query/core/queryTimeMessage.c \
	src/message/query/environment/queryVideoFrameMessage.c \
	src/message/query/environment/queryCameraCountMessage.c \
	src/message/query/platform/queryDiscreteDevicesMessage.c \
	src/message/query/platform/queryGlobalPoseMessage.c \
	src/message/query/platform/queryGlobalVectorMessage.c \
	src/message/query/platform/queryGlobalWaypointMessage.c \
	src/message/query/platform/queryPlatformOperationalDataMessage.c \
	src/message/query/platform/queryPlatformSpecificationsMessage.c \
	src/message/query/platform/queryTravelSpeedMessage.c \
	src/message/query/platform/queryVelocityStateMessage.c \
	src/message/query/platform/queryWaypointCountMessage.c \
	src/message/query/platform/queryWrenchEffortMessage.c \
	src/type/jausByte.c \
	src/type/jausDouble.c \
	src/type/jausEventLimit.c \
	src/type/jausFloat.c \
	src/type/jausInteger.c \
	src/type/jausLong.c \
	src/type/jausShort.c \
	src/type/jausTime.c \
	src/type/jausType.c \
	src/type/jausUnsignedInteger.c \
	src/type/jausUnsignedLong.c \
	src/type/jausUnsignedShort.c \
	src/type/jausWorldModelFeatureClass.c \
	src/type/jausWorldModelVectorObject.c

libjausC_a_LIBADD = $(INTLLIBS) $(ALLOCA)
INCLUDES = -I ./include/ -I ./include/cimar/ -I ./include/cimar/utm/
